# schematica

./: .env.example  .gitignore  README.md  pyproject.toml
scripts/: compare_catalogues.py  eval_catalogue.py
src/schematica/: agent.py  backends.py  broker.py  catalogue.py  cli.py  db.py  eval.py  introspect.py  output.py  pricing.py  prompts.py
tests/: conftest.py  test_broker_fetch.py  test_broker_fuzzy_warning.py  test_build_catalogue.py  test_catalogue_granularity.py  test_catalogue_validators.py  test_coerce_json_strings.py  test_compress_old_run_queries.py  test_connection_probe.py  test_context_window.py  test_derive_catalogue_path.py  test_dimension_manifest.py  test_drop_broken_sql.py  test_ensemble.py  test_eval.py  test_evaluator_crash_detection.py  test_execute_query.py  test_finish_catalogue_guidance.py  test_fk_coverage.py  test_fk_rejection_cap.py  test_helpers.py  test_introspect.py  test_iter_stats.py  test_iter_stats_cache.py  test_model_override.py  test_next_catalogue_index.py  test_package_version_check.py  test_parallel_queries.py  test_phase3_crash_fallback.py  test_phase3_evaluator_crash_filter.py  test_phase3_fallback.py  test_phase3_tracker.py  test_pre_validate_catalogue_items.py  test_pricing.py  test_pricing_fallback.py  test_rate_throttle.py  test_readonly_engine.py  test_readonly_prompt.py  test_render_overview_md.py  test_rpm.py  (+5 more)
