[project]
name = "schematica"
version = "0.1.0"
description = "Agentic LLM explorer that catalogues every metric and queryable fact in a SQL database"
authors = [
    {name = "apmariglis", email = "apmariglis@gmail.com"}
]
requires-python = ">=3.11"
dependencies = [
    "pandas>=3.0.1,<4.0.0",
    "anthropic>=0.84.0,<0.85.0",
    "python-dotenv>=1.2.2,<2.0.0",
    "rich>=13.0.0,<14.0.0",
    "sqlalchemy>=2.0.49",
]

[project.optional-dependencies]
litellm = ["litellm>=1.0"]

[project.scripts]
schematica = "schematica.agent:main"

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = ["src/schematica"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
